# obesity-class-prediction

./: Dockerfile  README.md  main.py  notebook.ipynb  notebook.py  postinstall.sh  predict.py  pyproject.toml  render.yaml  requirements.txt  train.py
Obesity-Prediction-Service/: Dockerfile  predict.py  pyproject.toml  train.py
